updated for updates to content types